docs/7.55/md/abenstring_functions.md
---
title: "Hint"
description: |
  The program DEMO_EXPRESSIONS shows examples of how to use string expressions. string_func - Description Functions(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendescriptive_functions.htm) string_func - Processing Functions(https://help.sap.com/doc/abapdocu_755_index_htm/7.55/e
version: "7.55"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstring_functions.htm"
abapFile: "abenstring_functions.htm"
keywords: ["do", "data", "abenstring", "functions"]
---

* * *

AS ABAP Release 755, ©Copyright 2020 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_data_working.htm) →  [Character String and Byte String Processing](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenabap_data_string.htm) →  [Expressions and Functions for String Processing](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstring_processing_expr_func.htm) → 

String Functions (string\_func)

String functions are part of the [built-in functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenbuilt_in_functions.htm). They are divided into:

-   [Description functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendescriptive_functions.htm)

-   [Processing functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenprocess_functions.htm)

Description functions have a numeric result and processing functions have a character-like result.

Parameters that are used by more than one function in the same way are described under [Shared Parameters of String Functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstring_functions_common_paras.htm).

Hint

The program DEMO\_EXPRESSIONS shows examples of how to use string expressions.

Continue
[string\_func - Description Functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abendescriptive_functions.htm)
[string\_func - Processing Functions](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenprocess_functions.htm)
[string\_func - Shared Parameters](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstring_functions_common_paras.htm)
[string\_func - Examples](https://help.sap.com/doc/abapdocu_755_index_htm/7.55/en-US/abenstring_functions_abexas.htm)